Fixed a bug in ZoneOffset path.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <li>Various useful <a href="ts-time/constants.html" target="_parent">constants</a>.</li>
     <li><a href="ts-time/Instant.html" target="_parent">Instant</a> class representing an instant of time without time zone relation.</li>
     <li><a href="ts-time/LocalDate.html" target="_parent">LocalDate</a>, <a href="ts-time/LocalTime.html" target="_parent">LocalTime</a>, <a href="ts-time/LocalDateTime.html" target="_parent">LocalDateTime</a> classes representing dates and times without time zone relation.</li>
-    <li><a href="ts-time/Zone.html#ZoneId" target="_parent">ZoneId</a>, <a href="ts/time/Zone.html#ZoneOffset" target="_parent">ZoneOffset</a> classes representing time zones and time zone offsets.</li>
+    <li><a href="ts-time/Zone.html#ZoneId" target="_parent">ZoneId</a>, <a href="ts-time/Zone.html#ZoneOffset" target="_parent">ZoneOffset</a> classes representing time zones and time zone offsets.</li>
     <li><a href="ts-time/ZonedDateTime.html" target="_parent">ZonedDateTime</a> and <a href="ts-time/OffsetDateTime.html" target="_parent">OffsetDateTime</a> classes representing an instant of time in a specific time zone or time zone offset.</li>
     <li><a href="ts-time/Duration.html" target="_parent">Duration</a> and <a href="ts-time/Period.html" target="_parent">Period</a> classes representing time intervals.</li>
     <li><a href="ts-time/DayOfWeek.html" target="_parent">DayOfWeek</a>, <a href="ts-time/Month.html" target="_parent">Month</a> and <a href="ts-time/Era.html" target="_parent">Era</a> classes and constants representing certain calendar terms.</li>
