--- a/ts-time/Instant.html
+++ b/ts-time/Instant.html
@@ -121,7 +121,7 @@ Native JS representation of the <b>Instant</b>, for compatibility with native an
 
 <h5><span id="default--atOffset"></span>atOffset<a class="anchorjs-link" href="#default--atOffset" aria-label="Anchor" style="padding-left: 0.375em;">#</a></h5>
 <div class="doc-member">
-<p><code>(offset: <a href="../ts/time/Zone.html#ZoneOffset" target="_parent">ZoneOffset</a>): <a href="OffsetDateTime.html" target="_parent">OffsetDateTime</a>
+<p><code>(offset: <a href="Zone.html#ZoneOffset" target="_parent">ZoneOffset</a>): <a href="OffsetDateTime.html" target="_parent">OffsetDateTime</a>
 </code></p>
 <dl class="row">
 <dt class="col-lg-2 col-sm-3">offset</dt><dd class="col-lg-10 col-sm-9">Time zone offset.</dd>
