--- a/ts-time/OffsetDateTime.html
+++ b/ts-time/OffsetDateTime.html
@@ -123,7 +123,7 @@
 <h4><span id="default---description"></span>Description<a class="anchorjs-link" href="#default---description" aria-label="Anchor" style="padding-left: 0.375em;">#</a></h4>
 
 Comprises a specific instant bound to a specific time zone offset. In other words, this is a tuple of
-(<a href="Instant.html" target="_parent">Instant</a>, <a href="../ts/time/Zone.html#ZoneOffset" target="_parent">ZoneOffset</a>). Unambiguously identifies a <a href="LocalDateTime.html" target="_parent">LocalDateTime</a>.
+(<a href="Instant.html" target="_parent">Instant</a>, <a href="Zone.html#ZoneOffset" target="_parent">ZoneOffset</a>). Unambiguously identifies a <a href="LocalDateTime.html" target="_parent">LocalDateTime</a>.
 
 
 
@@ -144,7 +144,7 @@ Instant representing <a href="#default--dateTime" target="_parent">dateTime</a> 
 
 <h5><span id="default--offset"></span>offset<a class="anchorjs-link" href="#default--offset" aria-label="Anchor" style="padding-left: 0.375em;">#</a></h5>
 <div class="doc-member">
-<p><code>readonly offset: <a href="../ts/time/Zone.html#ZoneOffset" target="_parent">ZoneOffset</a></code></p>
+<p><code>readonly offset: <a href="Zone.html#ZoneOffset" target="_parent">ZoneOffset</a></code></p>
 Time zone offset. Connection between <a href="#default--instant" target="_parent">instant</a> and <a href="#default--dateTime" target="_parent">dateTime</a>.
 </div>
 
@@ -523,7 +523,7 @@ shifted to 30th of <a href="Month.html#APRIL" target="_parent">APRIL</a>, 18:30,
 
 <h5><span id="default--ofInstant-static"></span>ofInstant<a class="anchorjs-link" href="#default--ofInstant-static" aria-label="Anchor" style="padding-left: 0.375em;">#</a></h5>
 <div class="doc-member">
-<p><code>(instant: <a href="Instant.html" target="_parent">Instant</a>, offset: <a href="../ts/time/Zone.html#ZoneOffset" target="_parent">ZoneOffset</a>): <b>OffsetDateTime</b>
+<p><code>(instant: <a href="Instant.html" target="_parent">Instant</a>, offset: <a href="Zone.html#ZoneOffset" target="_parent">ZoneOffset</a>): <b>OffsetDateTime</b>
 </code></p>
 <dl class="row">
 <dt class="col-lg-2 col-sm-3">instant</dt><dd class="col-lg-10 col-sm-9">Instant.</dd>
@@ -535,7 +535,7 @@ shifted to 30th of <a href="Month.html#APRIL" target="_parent">APRIL</a>, 18:30,
 
 <h5><span id="default--ofDateTime-static"></span>ofDateTime<a class="anchorjs-link" href="#default--ofDateTime-static" aria-label="Anchor" style="padding-left: 0.375em;">#</a></h5>
 <div class="doc-member">
-<p><code>(localDateTime: <a href="LocalDateTime.html" target="_parent">LocalDateTime</a>, offset: <a href="../ts/time/Zone.html#ZoneOffset" target="_parent">ZoneOffset</a>): <b>OffsetDateTime</b>
+<p><code>(localDateTime: <a href="LocalDateTime.html" target="_parent">LocalDateTime</a>, offset: <a href="Zone.html#ZoneOffset" target="_parent">ZoneOffset</a>): <b>OffsetDateTime</b>
 </code></p>
 <dl class="row">
 <dt class="col-lg-2 col-sm-3">localDateTime</dt><dd class="col-lg-10 col-sm-9">Local date/time.</dd>
