--- a/ts-time/ZonedDateTime.html
+++ b/ts-time/ZonedDateTime.html
@@ -125,7 +125,7 @@
 <h4><span id="default---description"></span>Description<a class="anchorjs-link" href="#default---description" aria-label="Anchor" style="padding-left: 0.375em;">#</a></h4>
 
 Comprises a specific instant bound to a specific time zone. In other words, this is a tuple of
-(<a href="Instant.html" target="_parent">Instant</a>, <a href="Zone.html#ZoneId" target="_parent">ZoneId</a>). Unambiguously identifies a <a href="LocalDateTime.html" target="_parent">LocalDateTime</a> and <a href="../ts/time/Zone.html#ZoneOffset" target="_parent">ZoneOffset</a>.
+(<a href="Instant.html" target="_parent">Instant</a>, <a href="Zone.html#ZoneId" target="_parent">ZoneId</a>). Unambiguously identifies a <a href="LocalDateTime.html" target="_parent">LocalDateTime</a> and <a href="Zone.html#ZoneOffset" target="_parent">ZoneOffset</a>.
 
 
 
@@ -152,7 +152,7 @@ Time zone. Connection between <a href="#default--instant" target="_parent">insta
 
 <h5><span id="default--offset"></span>offset<a class="anchorjs-link" href="#default--offset" aria-label="Anchor" style="padding-left: 0.375em;">#</a></h5>
 <div class="doc-member">
-<p><code>readonly offset: <a href="../ts/time/Zone.html#ZoneOffset" target="_parent">ZoneOffset</a></code></p>
+<p><code>readonly offset: <a href="Zone.html#ZoneOffset" target="_parent">ZoneOffset</a></code></p>
 Offset of <a href="#default--zone" target="_parent">zone</a> at <a href="#default--instant" target="_parent">instant</a>.
 </div>
 
