--- a/ts-time/LocalDateTime.html
+++ b/ts-time/LocalDateTime.html
@@ -418,7 +418,7 @@ So, if your variable may contain null or undefined, use the respective static me
 
 <h5><span id="default--atOffset"></span>atOffset<a class="anchorjs-link" href="#default--atOffset" aria-label="Anchor" style="padding-left: 0.375em;">#</a></h5>
 <div class="doc-member">
-<p><code>(offset: <a href="../ts/time/Zone.html#ZoneOffset" target="_parent">ZoneOffset</a>): <a href="OffsetDateTime.html" target="_parent">OffsetDateTime</a>
+<p><code>(offset: <a href="Zone.html#ZoneOffset" target="_parent">ZoneOffset</a>): <a href="OffsetDateTime.html" target="_parent">OffsetDateTime</a>
 </code></p>
 <dl class="row">
 <dt class="col-lg-2 col-sm-3">zone</dt><dd class="col-lg-10 col-sm-9">Time zone offset.</dd>
