--- a/doc.html
+++ b/doc.html
@@ -28,44 +28,88 @@
 			</div>
 		</nav>
 		<div class="doc-contents">
-			<ul>
-  <li><a href="ts-time/constants.html" target="_parent">constants</a></li>
-  <li><a href="ts-time/DayOfWeek.html" target="_parent">DayOfWeek</a></li>
-  <li><a href="ts-time/Duration.html" target="_parent">Duration</a></li>
-  <li><a href="ts-time/Era.html" target="_parent">Era</a></li>
-  <li><a href="ts-time/Instant.html" target="_parent">Instant</a></li>
-  <li><a href="ts-time/LocalDate.html" target="_parent">LocalDate</a></li>
-  <li><a href="ts-time/LocalDateTime.html" target="_parent">LocalDateTime</a></li>
-  <li><a href="ts-time/LocalTime.html" target="_parent">LocalTime</a></li>
-  <li><a href="ts-time/Month.html" target="_parent">Month</a></li>
-  <li><a href="ts-time/OffsetDateTime.html" target="_parent">OffsetDateTime</a></li>
-  <li><a href="ts-time/Period.html" target="_parent">Period</a></li>
-  <li><a href="ts-time/TimeField.html" target="_parent">TimeField</a></li>
-  <li><a href="ts-time/utils.html" target="_parent">utils</a></li>
-  <li><a href="ts-time/Zone.html" target="_parent">Zone</a></li>
-  <li><a href="ts-time/ZonedDateTime.html" target="_parent">ZonedDateTime</a></li>
-</ul>
+			<div class="container-fluid">
+  <div class="row">
+    <div class="col-6">
+      <h5><a href="https://www.npmjs.com/package/ts-time" target="_blank">ts-time</a></h5>
+      <ul class="list-unstyled">
+        <li><a href="ts-time/constants.html" target="_parent">constants</a></li>
+        <li><a href="ts-time/DayOfWeek.html" target="_parent">DayOfWeek</a></li>
+        <li><a href="ts-time/Duration.html" target="_parent">Duration</a></li>
+        <li><a href="ts-time/Era.html" target="_parent">Era</a></li>
+        <li><a href="ts-time/Instant.html" target="_parent">Instant</a></li>
+        <li><a href="ts-time/LocalDate.html" target="_parent">LocalDate</a></li>
+        <li><a href="ts-time/LocalDateTime.html" target="_parent">LocalDateTime</a></li>
+        <li><a href="ts-time/LocalTime.html" target="_parent">LocalTime</a></li>
+        <li><a href="ts-time/Month.html" target="_parent">Month</a></li>
+        <li><a href="ts-time/OffsetDateTime.html" target="_parent">OffsetDateTime</a></li>
+        <li><a href="ts-time/Period.html" target="_parent">Period</a></li>
+        <li><a href="ts-time/TimeField.html" target="_parent">TimeField</a></li>
+        <li><a href="ts-time/utils.html" target="_parent">utils</a></li>
+        <li><a href="ts-time/Zone.html" target="_parent">Zone</a></li>
+        <li><a href="ts-time/ZonedDateTime.html" target="_parent">ZonedDateTime</a></li>
+      </ul>
+    </div>
+    <div class="col-6">
+      <h5><a href="https://www.npmjs.com/package/ts-time-format" target="_blank">ts-time-format</a></h5>
+      <ul class="list-unstyled">
+        <li><a href="ts-time-format/constants.html" target="_parent">constants</a></li>
+        <li><a href="ts-time-format/DateFormatter.html" target="_parent">DateFormatter</a></li>
+        <li><a href="ts-time-format/DateTimeFormatter.html" target="_parent">DateTimeFormatter</a></li>
+        <li><a href="ts-time-format/OffsetDateTimeFormatter.html" target="_parent">OffsetDateTimeFormatter</a></li>
+        <li><a href="ts-time-format/OffsetFormatter.html" target="_parent">OffsetFormatter</a></li>
+        <li><a href="ts-time-format/TemporalCompiler.html" target="_parent">TemporalCompiler</a></li>
+        <li><a href="ts-time-format/TemporalFormatter.html" target="_parent">TemporalFormatter</a></li>
+        <li><a href="ts-time-format/TimeFormatter.html" target="_parent">TimeFormatter</a></li>
+        <li><a href="ts-time-format/utils.html" target="_parent">utils</a></li>
+        <li><a href="ts-time-format/ZonedDateTimeFormatter.html" target="_parent">ZonedDateTimeFormatter</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
 
 <footer>&copy; <script>document.write(new Date().getFullYear())</script> Copyright: Egor Nepomnyaschih</footer>
 		</div>
 		
-		<div id="index-dropdown" class="doc-dropdown" style="display: none"><ul>
-  <li><a href="ts-time/constants.html" target="_parent">constants</a></li>
-  <li><a href="ts-time/DayOfWeek.html" target="_parent">DayOfWeek</a></li>
-  <li><a href="ts-time/Duration.html" target="_parent">Duration</a></li>
-  <li><a href="ts-time/Era.html" target="_parent">Era</a></li>
-  <li><a href="ts-time/Instant.html" target="_parent">Instant</a></li>
-  <li><a href="ts-time/LocalDate.html" target="_parent">LocalDate</a></li>
-  <li><a href="ts-time/LocalDateTime.html" target="_parent">LocalDateTime</a></li>
-  <li><a href="ts-time/LocalTime.html" target="_parent">LocalTime</a></li>
-  <li><a href="ts-time/Month.html" target="_parent">Month</a></li>
-  <li><a href="ts-time/OffsetDateTime.html" target="_parent">OffsetDateTime</a></li>
-  <li><a href="ts-time/Period.html" target="_parent">Period</a></li>
-  <li><a href="ts-time/TimeField.html" target="_parent">TimeField</a></li>
-  <li><a href="ts-time/utils.html" target="_parent">utils</a></li>
-  <li><a href="ts-time/Zone.html" target="_parent">Zone</a></li>
-  <li><a href="ts-time/ZonedDateTime.html" target="_parent">ZonedDateTime</a></li>
-</ul>
+		<div id="index-dropdown" class="doc-dropdown" style="display: none"><div class="container-fluid">
+  <div class="row">
+    <div class="col-6">
+      <h5><a href="https://www.npmjs.com/package/ts-time" target="_blank">ts-time</a></h5>
+      <ul class="list-unstyled">
+        <li><a href="ts-time/constants.html" target="_parent">constants</a></li>
+        <li><a href="ts-time/DayOfWeek.html" target="_parent">DayOfWeek</a></li>
+        <li><a href="ts-time/Duration.html" target="_parent">Duration</a></li>
+        <li><a href="ts-time/Era.html" target="_parent">Era</a></li>
+        <li><a href="ts-time/Instant.html" target="_parent">Instant</a></li>
+        <li><a href="ts-time/LocalDate.html" target="_parent">LocalDate</a></li>
+        <li><a href="ts-time/LocalDateTime.html" target="_parent">LocalDateTime</a></li>
+        <li><a href="ts-time/LocalTime.html" target="_parent">LocalTime</a></li>
+        <li><a href="ts-time/Month.html" target="_parent">Month</a></li>
+        <li><a href="ts-time/OffsetDateTime.html" target="_parent">OffsetDateTime</a></li>
+        <li><a href="ts-time/Period.html" target="_parent">Period</a></li>
+        <li><a href="ts-time/TimeField.html" target="_parent">TimeField</a></li>
+        <li><a href="ts-time/utils.html" target="_parent">utils</a></li>
+        <li><a href="ts-time/Zone.html" target="_parent">Zone</a></li>
+        <li><a href="ts-time/ZonedDateTime.html" target="_parent">ZonedDateTime</a></li>
+      </ul>
+    </div>
+    <div class="col-6">
+      <h5><a href="https://www.npmjs.com/package/ts-time-format" target="_blank">ts-time-format</a></h5>
+      <ul class="list-unstyled">
+        <li><a href="ts-time-format/constants.html" target="_parent">constants</a></li>
+        <li><a href="ts-time-format/DateFormatter.html" target="_parent">DateFormatter</a></li>
+        <li><a href="ts-time-format/DateTimeFormatter.html" target="_parent">DateTimeFormatter</a></li>
+        <li><a href="ts-time-format/OffsetDateTimeFormatter.html" target="_parent">OffsetDateTimeFormatter</a></li>
+        <li><a href="ts-time-format/OffsetFormatter.html" target="_parent">OffsetFormatter</a></li>
+        <li><a href="ts-time-format/TemporalCompiler.html" target="_parent">TemporalCompiler</a></li>
+        <li><a href="ts-time-format/TemporalFormatter.html" target="_parent">TemporalFormatter</a></li>
+        <li><a href="ts-time-format/TimeFormatter.html" target="_parent">TimeFormatter</a></li>
+        <li><a href="ts-time-format/utils.html" target="_parent">utils</a></li>
+        <li><a href="ts-time-format/ZonedDateTimeFormatter.html" target="_parent">ZonedDateTimeFormatter</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
 </div>
 		<script type="text/javascript" src="jquery-3.2.1.min.js"></script>
 		<script type="text/javascript" src="bootstrap.bundle.min.js"></script>
