--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
 			<div class="container">
   <div class="jumbotron">
     <h1 class="display-4">ts-time</h1>
-    <p class="lead">TypeScript library of immutable date/time models with time zone support.</p>
+    <p class="lead">TypeScript/JavaScript library of immutable date/time models with time zone support.</p>
     <hr class="my-4">
     <p>This library mimics <a href="https://www.baeldung.com/java-8-date-time-intro" target="_blank">Java 8 Date/Time API</a>,
     adjusting its API to the best practices of TypeScript and JavaScript. It uses <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/DateTimeFormat" target="_blank">Intl.DateTimeFormat</a>
     API to detect time zone offsets, providing efficient and reliable time zone support in your client code.</p>
   </div>
+  <h3>ts-time</h3>
   <p>ts-time is available as <a href="https://www.npmjs.com/package/ts-time" target="_blank">npm package</a>.</p>
   <pre>
   npm install --save ts-time</pre>
@@ -71,29 +72,61 @@
   <p>None of the defined data structures has public constructors. You should use static methods to initialize them.
   Methods starting with "of" create new instances by parameters. Methods starting with "from" convert the structures
   to each other. Methods "parse" create new instances by strings, that are always compatible with "toString".</p>
+  <hr>
+  <h3>ts-time-format</h3>
+  <p><a href="https://www.npmjs.com/package/ts-time-format" target="_blank">ts-time-format</a> is an extension of
+  ts-time library with date/time formatting capabilities.</p>
+  <pre>
+  npm install --save ts-time-format</pre>
+  <p>As opposed to ts-time, ts-time-format API is very different from Java 8 Date/Time API, because its author finds
+  Java API for date/time formatting way too loose and error-prone. Implementation of ts-time-format is more strict -
+  for every class of ts-time there's a specialized implementation of <a href="ts-time-format/TemporalFormatter.html" target="_parent">TemporalFormatter</a> supporting its own set of
+  features. The library doesn't support date/time parsing by an arbitrary pattern.</p>
   <p>Project license is <a href="https://github.com/enepomnyaschih/ts-time/blob/master/LICENSE" target="_blank">MIT</a>.</p>
   <p>Find source code and bug tracker at <a href="https://github.com/enepomnyaschih/ts-time" target="_blank">GitHub</a>.</p>
 </div>
 <footer>&copy; <script>document.write(new Date().getFullYear())</script> Copyright: Egor Nepomnyaschih</footer>
 		</div>
 		
-		<div id="index-dropdown" class="doc-dropdown" style="display: none"><ul>
-  <li><a href="ts-time/constants.html" target="_parent">constants</a></li>
-  <li><a href="ts-time/DayOfWeek.html" target="_parent">DayOfWeek</a></li>
-  <li><a href="ts-time/Duration.html" target="_parent">Duration</a></li>
-  <li><a href="ts-time/Era.html" target="_parent">Era</a></li>
-  <li><a href="ts-time/Instant.html" target="_parent">Instant</a></li>
-  <li><a href="ts-time/LocalDate.html" target="_parent">LocalDate</a></li>
-  <li><a href="ts-time/LocalDateTime.html" target="_parent">LocalDateTime</a></li>
-  <li><a href="ts-time/LocalTime.html" target="_parent">LocalTime</a></li>
-  <li><a href="ts-time/Month.html" target="_parent">Month</a></li>
-  <li><a href="ts-time/OffsetDateTime.html" target="_parent">OffsetDateTime</a></li>
-  <li><a href="ts-time/Period.html" target="_parent">Period</a></li>
-  <li><a href="ts-time/TimeField.html" target="_parent">TimeField</a></li>
-  <li><a href="ts-time/utils.html" target="_parent">utils</a></li>
-  <li><a href="ts-time/Zone.html" target="_parent">Zone</a></li>
-  <li><a href="ts-time/ZonedDateTime.html" target="_parent">ZonedDateTime</a></li>
-</ul>
+		<div id="index-dropdown" class="doc-dropdown" style="display: none"><div class="container-fluid">
+  <div class="row">
+    <div class="col-6">
+      <h5><a href="https://www.npmjs.com/package/ts-time" target="_blank">ts-time</a></h5>
+      <ul class="list-unstyled">
+        <li><a href="ts-time/constants.html" target="_parent">constants</a></li>
+        <li><a href="ts-time/DayOfWeek.html" target="_parent">DayOfWeek</a></li>
+        <li><a href="ts-time/Duration.html" target="_parent">Duration</a></li>
+        <li><a href="ts-time/Era.html" target="_parent">Era</a></li>
+        <li><a href="ts-time/Instant.html" target="_parent">Instant</a></li>
+        <li><a href="ts-time/LocalDate.html" target="_parent">LocalDate</a></li>
+        <li><a href="ts-time/LocalDateTime.html" target="_parent">LocalDateTime</a></li>
+        <li><a href="ts-time/LocalTime.html" target="_parent">LocalTime</a></li>
+        <li><a href="ts-time/Month.html" target="_parent">Month</a></li>
+        <li><a href="ts-time/OffsetDateTime.html" target="_parent">OffsetDateTime</a></li>
+        <li><a href="ts-time/Period.html" target="_parent">Period</a></li>
+        <li><a href="ts-time/TimeField.html" target="_parent">TimeField</a></li>
+        <li><a href="ts-time/utils.html" target="_parent">utils</a></li>
+        <li><a href="ts-time/Zone.html" target="_parent">Zone</a></li>
+        <li><a href="ts-time/ZonedDateTime.html" target="_parent">ZonedDateTime</a></li>
+      </ul>
+    </div>
+    <div class="col-6">
+      <h5><a href="https://www.npmjs.com/package/ts-time-format" target="_blank">ts-time-format</a></h5>
+      <ul class="list-unstyled">
+        <li><a href="ts-time-format/constants.html" target="_parent">constants</a></li>
+        <li><a href="ts-time-format/DateFormatter.html" target="_parent">DateFormatter</a></li>
+        <li><a href="ts-time-format/DateTimeFormatter.html" target="_parent">DateTimeFormatter</a></li>
+        <li><a href="ts-time-format/OffsetDateTimeFormatter.html" target="_parent">OffsetDateTimeFormatter</a></li>
+        <li><a href="ts-time-format/OffsetFormatter.html" target="_parent">OffsetFormatter</a></li>
+        <li><a href="ts-time-format/TemporalCompiler.html" target="_parent">TemporalCompiler</a></li>
+        <li><a href="ts-time-format/TemporalFormatter.html" target="_parent">TemporalFormatter</a></li>
+        <li><a href="ts-time-format/TimeFormatter.html" target="_parent">TimeFormatter</a></li>
+        <li><a href="ts-time-format/utils.html" target="_parent">utils</a></li>
+        <li><a href="ts-time-format/ZonedDateTimeFormatter.html" target="_parent">ZonedDateTimeFormatter</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
 </div>
 		<script type="text/javascript" src="jquery-3.2.1.min.js"></script>
 		<script type="text/javascript" src="bootstrap.bundle.min.js"></script>
