--- a/ts-time/Period.html
+++ b/ts-time/Period.html
@@ -86,7 +86,7 @@
 						<h1><span id="default"></span>ts-time/Period</h1>
 						
 						<h3>Consumption</h3>
-						<pre>import Period, {NULL_PERIOD, DAY_PERIOD, WEEK_PERIOD, MONTH_PERIOD, QUARTER_PERIOD, YEAR_PERIOD} from "ts-time/Period";</pre>
+						<pre class="doc-consumption">import Period, {NULL_PERIOD, DAY_PERIOD, WEEK_PERIOD, MONTH_PERIOD, QUARTER_PERIOD, YEAR_PERIOD} from "ts-time/Period";</pre>
 						
 <h3><span id="default"></span>Default export<a class="anchorjs-link" href="#default" aria-label="Anchor" style="padding-left: 0.375em;">#</a></h3>
 <div class="doc-section">
@@ -264,23 +264,45 @@ Period representing a calendar year.
 			
 		</div>
 		
-		<div id="index-dropdown" class="doc-dropdown" style="display: none"><ul>
-  <li><a href="constants.html" target="_parent">constants</a></li>
-  <li><a href="DayOfWeek.html" target="_parent">DayOfWeek</a></li>
-  <li><a href="Duration.html" target="_parent">Duration</a></li>
-  <li><a href="Era.html" target="_parent">Era</a></li>
-  <li><a href="Instant.html" target="_parent">Instant</a></li>
-  <li><a href="LocalDate.html" target="_parent">LocalDate</a></li>
-  <li><a href="LocalDateTime.html" target="_parent">LocalDateTime</a></li>
-  <li><a href="LocalTime.html" target="_parent">LocalTime</a></li>
-  <li><a href="Month.html" target="_parent">Month</a></li>
-  <li><a href="OffsetDateTime.html" target="_parent">OffsetDateTime</a></li>
-  <li><b>Period</b></li>
-  <li><a href="TimeField.html" target="_parent">TimeField</a></li>
-  <li><a href="utils.html" target="_parent">utils</a></li>
-  <li><a href="Zone.html" target="_parent">Zone</a></li>
-  <li><a href="ZonedDateTime.html" target="_parent">ZonedDateTime</a></li>
-</ul>
+		<div id="index-dropdown" class="doc-dropdown" style="display: none"><div class="container-fluid">
+  <div class="row">
+    <div class="col-6">
+      <h5><a href="https://www.npmjs.com/package/ts-time" target="_blank">ts-time</a></h5>
+      <ul class="list-unstyled">
+        <li><a href="constants.html" target="_parent">constants</a></li>
+        <li><a href="DayOfWeek.html" target="_parent">DayOfWeek</a></li>
+        <li><a href="Duration.html" target="_parent">Duration</a></li>
+        <li><a href="Era.html" target="_parent">Era</a></li>
+        <li><a href="Instant.html" target="_parent">Instant</a></li>
+        <li><a href="LocalDate.html" target="_parent">LocalDate</a></li>
+        <li><a href="LocalDateTime.html" target="_parent">LocalDateTime</a></li>
+        <li><a href="LocalTime.html" target="_parent">LocalTime</a></li>
+        <li><a href="Month.html" target="_parent">Month</a></li>
+        <li><a href="OffsetDateTime.html" target="_parent">OffsetDateTime</a></li>
+        <li><b>Period</b></li>
+        <li><a href="TimeField.html" target="_parent">TimeField</a></li>
+        <li><a href="utils.html" target="_parent">utils</a></li>
+        <li><a href="Zone.html" target="_parent">Zone</a></li>
+        <li><a href="ZonedDateTime.html" target="_parent">ZonedDateTime</a></li>
+      </ul>
+    </div>
+    <div class="col-6">
+      <h5><a href="https://www.npmjs.com/package/ts-time-format" target="_blank">ts-time-format</a></h5>
+      <ul class="list-unstyled">
+        <li><a href="../ts-time-format/constants.html" target="_parent">constants</a></li>
+        <li><a href="../ts-time-format/DateFormatter.html" target="_parent">DateFormatter</a></li>
+        <li><a href="../ts-time-format/DateTimeFormatter.html" target="_parent">DateTimeFormatter</a></li>
+        <li><a href="../ts-time-format/OffsetDateTimeFormatter.html" target="_parent">OffsetDateTimeFormatter</a></li>
+        <li><a href="../ts-time-format/OffsetFormatter.html" target="_parent">OffsetFormatter</a></li>
+        <li><a href="../ts-time-format/TemporalCompiler.html" target="_parent">TemporalCompiler</a></li>
+        <li><a href="../ts-time-format/TemporalFormatter.html" target="_parent">TemporalFormatter</a></li>
+        <li><a href="../ts-time-format/TimeFormatter.html" target="_parent">TimeFormatter</a></li>
+        <li><a href="../ts-time-format/utils.html" target="_parent">utils</a></li>
+        <li><a href="../ts-time-format/ZonedDateTimeFormatter.html" target="_parent">ZonedDateTimeFormatter</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
 </div>
 		<script type="text/javascript" src="../jquery-3.2.1.min.js"></script>
 		<script type="text/javascript" src="../bootstrap.bundle.min.js"></script>
