--- a/ts-time/Instant.html
+++ b/ts-time/Instant.html
@@ -286,7 +286,7 @@ So, if your variable may contain null or undefined, use the respective static me
 </code></p>
 <dl class="row">
 <dt class="col-lg-2 col-sm-3">str</dt><dd class="col-lg-10 col-sm-9">String representation of an instant in ISO format in any time zone or offset.
-See <a href="ZonedDateTime.html" target="_parent">ZonedDateTime</a>.<a href="../ZonedDateTime.html#default--parse-static" target="_parent">parse</a> for details.
+See <a href="ZonedDateTime.html" target="_parent">ZonedDateTime</a>.<a href="ZonedDateTime.html#default--parse-static" target="_parent">parse</a> for details.
 </dd>
 <dt class="col-lg-2 col-sm-3"><span class="doc-returns">returns</span></dt><dd class="col-lg-10 col-sm-9"><b>Instant</b> representation.</dd>
 </dl>
