--- a/ts-time/Zone.html
+++ b/ts-time/Zone.html
@@ -89,6 +89,9 @@
 
 <a class="nav-link" href="#UTC">UTC</a>
 
+
+<a class="nav-link" href="#LOCAL_ZONE_ID">LOCAL_ZONE_ID</a>
+
 						<div class="py-3"></div>
 					</nav>
 				</nav>
@@ -404,6 +407,11 @@ So, if your variable may contain null or undefined, use the respective static me
 <div class="doc-section">
 <p><code>UTC: <a href="#ZoneOffset" target="_parent">ZoneOffset</a></code></p>
 UTC time zone having a constant 0 offset.
+</div>
+<h3><span id="LOCAL_ZONE_ID"></span>LOCAL_ZONE_ID<a class="anchorjs-link" href="#LOCAL_ZONE_ID" aria-label="Anchor" style="padding-left: 0.375em;">#</a></h3>
+<div class="doc-section">
+<p><code>LOCAL_ZONE_ID: <a href="#ZoneId" target="_parent">ZoneId</a></code></p>
+Local browser/system time zone.
 </div>
 					</div>
 					<footer>&copy; <script>document.write(new Date().getFullYear())</script> Copyright: Egor Nepomnyaschih</footer>
