--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
   Java API for date/time formatting way too loose and error-prone. Implementation of ts-time-format is more strict -
   for every class of ts-time there's a specialized implementation of <a href="ts-time-format/TemporalFormatter.html" target="_parent">TemporalFormatter</a> supporting its own set of
   features. The library doesn't support date/time parsing by an arbitrary pattern.</p>
+  <h3>Browser support</h3>
+  <p>Microsoft Edge, Google Chrome, Mozilla Firefox, NodeJS: full support.</p>
+  <p>Internet Explorer 11: all features except local time zones are supported. All local time zones have zero offset.</p>
+  <p>Other browsers: not tested.</p>
   <p>Project license is <a href="https://github.com/enepomnyaschih/ts-time/blob/master/LICENSE" target="_blank">MIT</a>.</p>
   <p>Find source code and bug tracker at <a href="https://github.com/enepomnyaschih/ts-time" target="_blank">GitHub</a>.</p>
 </div>
