--- a/ts-time/utils.html
+++ b/ts-time/utils.html
@@ -38,6 +38,12 @@
 						
 <a class="nav-link" href="#isLeapYear">isLeapYear</a>
 
+
+<a class="nav-link" href="#isTimeZoneSupport">isTimeZoneSupport</a>
+
+
+<a class="nav-link" href="#requireTimeZoneSupport">requireTimeZoneSupport</a>
+
 						<div class="py-3"></div>
 					</nav>
 				</nav>
@@ -57,6 +63,31 @@
 <dt class="col-lg-2 col-sm-3"><span class="doc-returns">returns</span></dt><dd class="col-lg-10 col-sm-9"><p>True if this is a leap year.</p>
 <pre>
 (year % 4 === 0) &amp;&amp; (year % 100 !== 0 || year % 400 === 0)</pre>
+</dd>
+</dl>
+
+
+</div>
+<h3><span id="isTimeZoneSupport"></span>isTimeZoneSupport<a class="anchorjs-link" href="#isTimeZoneSupport" aria-label="Anchor" style="padding-left: 0.375em;">#</a></h3>
+<div class="doc-section">
+<p><code>(): boolean
+</code></p>
+<dl class="row">
+<dt class="col-lg-2 col-sm-3"><span class="doc-returns">returns</span></dt><dd class="col-lg-10 col-sm-9"><p>True if current browser/environment supports local time zones such as "Europe/Berlin". See <b>Browser
+support</b> at the <a href="../index.html" target="_parent">home page</a>.</p>
+</dd>
+</dl>
+
+
+</div>
+<h3><span id="requireTimeZoneSupport"></span>requireTimeZoneSupport<a class="anchorjs-link" href="#requireTimeZoneSupport" aria-label="Anchor" style="padding-left: 0.375em;">#</a></h3>
+<div class="doc-section">
+<p><code>(): boolean
+</code></p>
+<dl class="row">
+<dt class="col-lg-2 col-sm-3"><span class="doc-returns">returns</span></dt><dd class="col-lg-10 col-sm-9"><p>Same as <a href="#isTimeZoneSupport" target="_parent">isTimeZoneSupport</a>, but also logs a warning message to the browser/environment console if local time
+zones are not supported. The function guarantees that the message is only logged once, on the first function
+call. This function is called internally on the first attempt to instantiate a local <a href="Zone.html#ZoneId" target="_parent">ZoneId</a>.</p>
 </dd>
 </dl>
 
